z-index issue

--- a/app/stylesheets/default.sass
+++ b/app/stylesheets/default.sass
@@ -18,6 +18,7 @@
   border:
     :bottom= !pageTabBorder 
   :background= !headerBG 
+  z-index: 999
 
   .sponsor
     :background= !sponsorBG
@@ -381,7 +382,7 @@ li
             visibility: visible
 
         .dropdown
-          z-index: 99
+          z-index: 999
           visibility: hidden
           ul
 
